pamc/src/tests/sample_code/should_fail/parse/check/question_output.ph
type Unit {
    .U: Unit,
}

let foo = check Unit.U: U {
    ?
};
